--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "indeciso-app",
+  "homepage": "https://RafaelAngelo1999.github.io/IndecisoRoulette/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.16",
     "react": "^18.2.0",
-    "react-custom-roulette": "^1.3.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "uuid": "^9.0.0"
