--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.16",
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "uuid": "^9.0.0"
